# remote-mcp-angular-documentation

./: README.md  compose.yml  config.toml  ingestion.py  main.py  mcp_server.py  pyproject.toml  retrieval.py  test.py
config/: settings.py
docker/: Dockerfile.ingestion  Dockerfile.mcp_server
modules/: retrieval.py
type_definitions/: retrieved_doc.py
