[project]
name = "remote-mcp-angular-documentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.1",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.8.3",
    "qdrant-client>=1.17.1",
    "structlog>=25.5.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
